2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* circoverlap.cpp: Virtualise kz.
	